@@ -1739,6 +1739,66 @@
 				</configuration>
 			</plugin>
 			-->
+			<plugin>
+				<groupId>org.bitstrings.maven.plugins</groupId>
+				<artifactId>dependencypath-maven-plugin</artifactId>
+				<version>${maven.dependencypath.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>set-all</id>
+						<goals>
+							<goal>set</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>set-relative-builddir</id>
+						<goals>
+							<goal>set</goal>
+						</goals>
+						<configuration>
+							<propertySets>
+								<propertySet>
+									<suffix>builddir</suffix>
+									<relativeTo>${project.build.directory}</relativeTo>
+									<transitive>false</transitive>
+								</propertySet>
+							</propertySets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- TODO see https://github.com/bitstrings/nbm-maven/tree/master-codehaus
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>nbm-maven-plugin</artifactId>
+				<version>${maven.nbm.plugin.version}</version>
+				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<goals>
+							<goal>webstart-app</goal>
+						</goals>
+						<configuration>
+							<masterJnlpFile>src/main/webstart/${brandingToken}.jnlp</masterJnlpFile>
+							<masterJnlpFileName>${brandingToken}</masterJnlpFileName>
+							<generateJnlpApplicationTemplate>true</generateJnlpApplicationTemplate>
+							<additionalArguments>-J-Xms384m -J-Xmx800m -J-XX:MaxPermSize=256m -J-Djava.util.Arrays.useLegacyMergeSort=true</additionalArguments>
+							<keystore>${jarsigner.keystore}</keystore>
+							<keystorealias>${jarsigner.alias}</keystorealias>
+							<keystorepassword>${jarsigner.storepass}</keystorepassword>
+							<keystoretype>${jarsigner.storetype}</keystoretype>
+							<signingRemoveExistingSignatures>true</signingRemoveExistingSignatures>
+							<signingThreads>8</signingThreads>
+							<webappResources>
+								<webappResource>
+									<directory>src/main/resources</directory>
+								</webappResource>
+							</webappResources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			-->
 		</plugins>
 	</build>
 
